3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Tentative optimizations, shouldn't cause issues but need testing.
 common/object.c: fix_object() doesn't need to be called all the time.
 server/c_object.c: why is player/monster removed then inserted? if special case,
  please document why
Nicolas Weeger 2007-06-10

Partial fix for #1735275: Server sends incorrect spell info data.
 server/login.c: send spell before calling fix_object() which updates spells.
Nicolas Weeger 2007-06-10

Tentative fix for #1735272: Server sends invalid item tags
 server/plugins.c: don't send invisible objects, they're never sent to the client.
Nicolas Weeger 2007-06-10

test/bugs/bugtrack/check_1727944.c: fix ininitialized variable, reduce # of tests
 as the test isn't that meaningful.
Nicolas Weeger 2007-06-10

Disable unimplemented tests, remove quests tests.
 test/unit/common/Makefile.am
 test/unit/common/check_quest.c: removed
 test/unit/random_maps/Makefile.am
 test/unit/server/Makefile.am
 test/unit/socket/Makefile.am
Nicolas Weeger 2007-06-10

Fix accidentally broken unit test.
 test/unit/common/check_arch.c: use correct type/subtype.
Nicolas Weeger 2007-06-10

Fix Win32 compilation.
 common/loader.l logger.c re-cmp.c
 make_win32/crossfire32.dsp installwin32.bat
 plugins/cfanim/include/cfanim_proto.h
 plugins/cfpython/cfpython_object.c
 random_maps/floor.c treasure.c
Nicolas Weeger 2007-06-10

utils/mapper.c: fix compilation. Fix exit without path not displayed.
Nicolas Weeger 2007-06-10

Remove obsolete player_cmd().
 doc/Developers/protocol
 include/sockproto.h
 socket/loop.c request.c
Nicolas Weeger 2007-06-10

lib/artifacts: update header.
Nicolas Weeger 2007-06-09
